# Hermit

./: Cargo.toml  README.md
src/: builtin.rs  command.rs  completer.rs  external.rs  flags.rs  git.rs  main.rs  shell.rs
src/commands/: cd.rs  echo.rs  history.rs  ls.rs  mod.rs  pwd.rs  type_cmd.rs  type_command.rs
src/core/: command.rs  completer.rs  external.rs  flags.rs  mod.rs  registry.rs
src/git/: mod.rs
src/utils/: mod.rs
