[package]
name = "hermit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple shell implementation in Rust"
license = "MIT"

[dependencies]
dirs = "5.0.1"
rustyline = "14.0.0"
tempfile = "3.14.0"
os_pipe = "1.2.1"
colored = "2.0.4"
os-release = "0.1.0"
term_size = "0.3.2"
git2 = "0.19.0"

[dev-dependencies]
tempfile = "3.14.0"
